Archive2/17/2509464e71ac69/output
main.cpp:3:12: error: conflicting declaration 'const auto x'
 auto const x = 42;
            ^
main.cpp:1:18: note: previous declaration as 'const int x'
 extern int const x;
                  ^
