Archive2/17/2509464e71ac69/main.cpp
extern int const x;

auto const x = 42;

int main() { }